# HaliVerTests

./: .gitignore  CMakeLists.txt  HOWTO  README.md  even.cpp  even_c_run.cpp  even_c_run_static.cpp  even_kernel.c  even_kernel.sil  even_kernel_1.c  even_kernel_2.c  even_kernel_3.c  even_kernel_4.c  newfile.txt  vercors.h
.github/workflows/: get_version_vercors.yml
OldVerCorsHalideStuff/: CMakeLists.txt  Makefile  even.cpp  even_c_run.cpp  even_c_run_static.cpp  even_opencl_kernel.c  even_opencl_kernel_gen.c  even_opencl_kernel_gen_0.c  even_opencl_kernel_gen_example_bob.c  even_opencl_kernel_gen_verifies.c  even_opencl_kernel_minimal.c  even_opencl_kernel_shared_mem.c  even_opencl_kernel_simple.c  even_static.h  herschrijf_bleh.c  opencl_test.c  opencl_test.out  opencl_test_kernel.cl  temp-cu.sil  temp.pvl  temp.sil  temp.sill  temp.sils  temp2.sil  temp_2.pvl  temp_2.sil  temp_changed.sil  test.cu  test2.cu  vercors_remarks.txt
Unittests/: CMakeLists.txt  simplified_unroll.pvl
Unittests/tests/alg/: input_buffer.cpp  input_floats.cpp  pure_func.cpp  reduction.cpp  reduction_multi.cpp  reduction_multi_fail.cpp  update.cpp  update_full.cpp  update_full_fail.cpp
Unittests/tests/compute_at/: compute_half.cpp  compute_root.cpp  compute_update.cpp
Unittests/tests/fuse/: fuse_par.cpp  fuse_ser.cpp
Unittests/tests/limitations/: pure_func_no_bounds.cpp
Unittests/tests/parallel/: par_par.cpp  par_red.cpp  par_seq.cpp  seq_par.cpp
Unittests/tests/reorder/: reorder.cpp  reorder_par_red.cpp  reorder_par_red_2.cpp  reorder_par_red_3.cpp  reorder_par_ser.cpp  reorder_seq_par.cpp  reorder_seq_red.cpp
Unittests/tests/split/: split_exact.cpp  split_if.cpp  split_round.cpp  split_shift.cpp
Unittests/tests/store_at/: store_half.cpp  store_root.cpp  store_update.cpp
Unittests/tests/unroll/: unroll_outer.cpp  unroll_par.cpp  unroll_red.cpp  unroll_ser.cpp
demo/: CMakeLists.txt  even.cpp  even_pvl.pvl
experiments/: CMakeLists.txt  CTestConfig.cmake  RunExperiments.ipynb  blur_compilation.json  blur_front_pvl.pvl  blur_line_info.json  blur_listing.pvl  blur_pvl.pvl  blur_results.txt  blur_results_verification.json  conv_layer_results.txt  gemm_results.txt  hist_results.txt  preprocess.py  result_table.tex  run_experiments.sh  table.tex  test.out
experiments/.ipynb_checkpoints/: RunExperiments-checkpoint.ipynb  Tests-checkpoint.ipynb
experiments/auto_viz/: auto_viz.cpp
experiments/bgu/: bgu.cpp
experiments/bilateral_grid/: bilateral_grid.cpp
experiments/blur/: blur.cpp
experiments/conv_layer/: conv_layer.cpp
experiments/gemm/: gemm.cpp
experiments/hist/: hist-v0.cpp  hist.cpp
experiments/hist/debug/: hist_pvl-2-v1.pvl  hist_pvl-2-v2.pvl  hist_pvl-2-v3.pvl  hist_pvl-2-v4.pvl  hist_pvl-2-v5.pvl  hist_pvl-2-v6.pvl  hist_pvl-2.pvl
experiments/potential_bug/: Readme.md  blur.cpp  blur_pvl-1.pvl  blur_pvl-3-0.vpr  blur_pvl-3.pvl  hist.cpp
experiments/results/: original_blur_compilation.json  original_blur_results_verification.json  original_conv_layer_compilation.json  original_conv_layer_line_info.json  original_conv_layer_results_verification.json  original_gemm_compilation.json  original_gemm_line_info.json  original_gemm_results_verification.json  original_hist_compilation.json  original_hist_line_info.json  original_hist_results_verification.json
